--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body {
   color: rgba(227, 140, 25, 0.9416141457);
 }
 #header .center .gnb li:nth-child(4):hover a {
-  color: rgba(157, 25, 227, 0.9416141457);
+  color: rgba(227, 25, 107, 0.9416141457);
 }
 #header .center .gnb li:nth-child(2).on a {
   color: rgba(15, 166, 15, 0.9416141457);
@@ -63,7 +63,7 @@ body {
   color: rgba(227, 140, 25, 0.9416141457);
 }
 #header .center .gnb li:nth-child(4).on a {
-  color: rgba(157, 25, 227, 0.9416141457);
+  color: rgba(227, 25, 107, 0.9416141457);
 }
 
 #container .home {
@@ -183,11 +183,11 @@ body {
   padding: 30px;
 }
 #container .about .center .left h3 {
-  font-size: 25px;
+  font-size: 26px;
 }
 #container .about .center .left .info1 h4, #container .about .center .left .info2 h4, #container .about .center .left .info3 h4 {
   margin-top: 30px;
-  font-size: 18px;
+  font-size: 22px;
   margin-bottom: 20px;
   color: rgba(15, 166, 15, 0.9416141457);
 }
@@ -328,7 +328,7 @@ body {
   color: rgba(227, 140, 25, 0.9416141457);
 }
 #container .portfolio .center .left .info p.on {
-  height: 230px;
+  height: 250px;
 }
 #container .portfolio .center .left .leftline {
   position: absolute;
@@ -358,7 +358,7 @@ body {
 #container .portfolio .center .rightport .list .title {
   margin-top: 10px;
   margin-bottom: 30px;
-  line-height: 1.3;
+  line-height: 1.5;
 }
 #container .portfolio .center .rightport .list a {
   color: #fff;
@@ -412,11 +412,14 @@ body {
   align-items: center;
   position: relative;
 }
-#container .contact .center h2 {
-  margin-left: 30px;
+#container .contact .center .contactme {
+  margin: 0 auto;
 }
-#container .contact .center p span {
-  color: rgba(157, 25, 227, 0.9416141457);
+#container .contact .center .contactme p {
+  font-size: 25px;
+  margin-bottom: 30px;
+}
+#container .contact .center .contactme p span {
   font-weight: bold;
 }
 #container .contact .center .leftline {
@@ -426,5 +429,5 @@ body {
   width: 3px;
   height: 600px;
   z-index: 9;
-  background: linear-gradient(180deg, rgba(157, 25, 227, 0.9416141457) 0%, rgba(145, 21, 227, 0.2049194678) 100%);
+  background: linear-gradient(180deg, rgba(227, 25, 107, 0.9416141457) 0%, rgba(227, 21, 70, 0.2049194678) 100%);
 }
