--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,7 +36,7 @@ body{line-height: 1;font-family: 'Noto Serif KR', serif;}
                 }
                 &:nth-child(4):hover{
                     a{
-                        color: rgba(157,25,227,0.9416141456582633);
+                        color: rgba(227,25,107,0.9416141456582633);
                     }
                 }
                 &:nth-child(2).on{
@@ -51,7 +51,7 @@ body{line-height: 1;font-family: 'Noto Serif KR', serif;}
                 }
                 &:nth-child(4).on{
                     a{
-                        color: rgba(157,25,227,0.9416141456582633);
+                        color: rgba(227,25,107,0.9416141456582633);
                     }
                 }
             } 
@@ -153,12 +153,12 @@ body{line-height: 1;font-family: 'Noto Serif KR', serif;}
                 z-index: 9;
                 padding: 30px;
                 h3{
-                    font-size: 25px;
+                    font-size: 26px;
                 }
                 .info1,.info2,.info3{
                     h4{
                         margin-top: 30px;
-                        font-size: 18px;
+                        font-size: 22px;
                         margin-bottom: 20px;
                         color: rgba(15,166,15,0.9416141456582633);
                     }
@@ -300,7 +300,7 @@ body{line-height: 1;font-family: 'Noto Serif KR', serif;}
                         }
                     }
                     p.on{
-                        height: 230px;
+                        height: 250px;
                     }
                 }
                 .leftline{
@@ -330,7 +330,7 @@ body{line-height: 1;font-family: 'Noto Serif KR', serif;}
                     .title{
                         margin-top: 10px;
                         margin-bottom: 30px;
-                        line-height: 1.3;
+                        line-height: 1.5;
                     }
                     a{
                         color: #fff;
@@ -390,15 +390,16 @@ body{line-height: 1;font-family: 'Noto Serif KR', serif;}
             justify-content: space-between;
             align-items: center;
             position: relative;
-            h2{
-                margin-left: 30px;
-            }
-            p{
-                span{
-                    color: rgba(157,25,227,0.9416141456582633);
-                    font-weight: bold;
+            .contactme{
+                margin: 0 auto;
+                p{
+                    font-size: 25px;
+                    margin-bottom: 30px;
+                    span{
+                        font-weight: bold;
+                    }
                 }
-            }
+            }   
             .leftline{
                 position: absolute;
                 top: 200px;
@@ -406,7 +407,7 @@ body{line-height: 1;font-family: 'Noto Serif KR', serif;}
                 width: 3px;
                 height: 600px;
                 z-index: 9;
-                background: linear-gradient(180deg, rgba(157,25,227,0.9416141456582633) 0%, rgba(145,21,227,0.2049194677871149) 100%);
+                background: linear-gradient(180deg, rgba(227,25,107,0.9416141456582633) 0%, rgba(227,21,70,0.2049194677871149) 100%);
             }
         }
     }
